# ESP32-Flasher

./: .gitignore  how_to_readme.md  installer_inno_script.iss  main.py  main.spec  readme.md  requirements.txt
.github/workflows/: build.yml
Resources/: Info.plist  icon.icns
esp_env/: pyvenv.cfg
esp_env/Scripts/: activate  activate.bat  bin2hex.py  hex2bin.py  hex2dump.py  hexdiff.py  hexinfo.py  hexmerge.py
flasher_tool/: Cargo.toml
flasher_tool/src/: main.rs
